--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#1c313a" />
+    <meta name="theme-color" content="#b30283" />
 
     <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/public/icons/apple-touch-icon-180.png" />
+    <link rel="shortcut icon" href="/public/icons/favicon.ico" />
 
     <title>Hacker News</title>
   </head>
