update asset paths

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#ff6600" />
 
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/public/icons/apple-touch-icon-180.png" />
-    <link rel="shortcut icon" href="/public/icons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon-180.png" />
+    <link rel="shortcut icon" href="/assets/icons/favicon.ico" />
 
     <title>Hacker News</title>
   </head>
